<resources>
    <string name="app_name">Material Wallpaper</string>

    <string name="action_settings">Settings</string>

    <!-- admob ads -->
    <string name="admob_publisher_id">ca-app-pub-2275082029538522/9859232298</string>
    <string name="admob_interstitial_id">ca-app-pub-2275082029538522/3812698697</string>

    <!-- parse push notification -->
    <string name="parse_application_id">tl37hAkgFi4FIgdVqmEZeD4H9TKIDFSkMN7oVGUu</string>
    <string name="parse_client_key">EMJWSdd5CUUKf5G4YQZQ52HN6nSmN6zyAZceaKAV</string>

    <!-- About Content -->
    <string name="app_email">developer.solodroid@gmail.com</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_copyright">Copyright @Solodroid Developer</string>

    <string name="play_more_apps">https://play.google.com/store/search?q=solodroid+application</string>

    <string name="menu_favorite">My Favorite</string>
    <string name="menu_about">About</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="menu_back">Previous Wallpaper</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="menu_save">Save</string>
    <string name="menu_zoom">Pinch Zoom</string>
    <string name="menu_fav">Favorite</string>
    <string name="menu_setaswallpaper">Set as Wallpaper</string>
    <string name="menu_next">Next Wallpaper</string>
    <string name="img_no">No Favorite Found</string>
    <string name="setaswallpaper">Set As Wallpaper</string>

    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="recent_wallpaper">Recent Wallpaper</string>
    <string name="category_wallpaper">Category</string>
    <string name="favorite_wallpaper">Favorite</string>
    <string name="about">About</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="myaccount">My Account</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">desc</string>

</resources>
